--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\Sydney\Web Development\HTML Personal Site\images\Profile Pic.png" alt="Terrell Profile Picture"></td>
+                <td><img src="images\Profile Pic.png" alt="Terrell Profile Picture"></td>
                 <td><h1>Terrell Grenyion</h1>
                     <p><em>Full Stack Web Developer</em></p>
                     <p>I am a full-stack web developer experienced in several different programming languages who is currently pursuing a <strong>BS</strong> in <strong>Software Engineering</strong> as well as an <strong>MS</strong> in <strong> Software Engineering</strong> and <strong>Cybersecurity</strong>.</p></td>
